# pypi-register

./: README.md  package.json  setup.cfg  setup.py
scripts/: pypi-register
